--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.css?v=15">
+    <link rel="stylesheet" href="styles.css?v=16">
 
     <!-- Icons (using Phosphor Icons for a clean pro look) -->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
@@ -300,8 +300,8 @@
                 <h2>İşletmenizin İhtiyaçları İçin Teklif Alın</h2>
                 <p>Profesyonel ekibimiz size en
                     uygun çözümleri sunmak için hazır. Hemen bizimle iletişime geçin.</p>
-                <a href="tel:+902120000000" class="btn btn-primary" style="margin-right: 15px;"><i
-                        class="ph ph-phone"></i> +90 212 000 00 00</a>
+                <a href="tel:+77014850226" class="btn btn-primary" style="margin-right: 15px;"><i
+                        class="ph ph-phone"></i> +7 701 485 0226</a>
                 <a href="mailto:info@crystalclean.com" class="btn btn-secondary"><i class="ph ph-envelope"></i> Bize
                     Yazın</a>
             </div>
@@ -327,8 +327,8 @@
                 </div>
                 <div class="footer-col">
                     <h4>İletişim</h4>
-                    <p><strong>Adres:</strong> Organize Sanayi Bölgesi, İstanbul</p>
-                    <p><strong>Tel:</strong> +90 212 000 00 00</p>
+                    <p><strong>Adres:</strong> Jetysu District, Almatı, Kazakistan</p>
+                    <p><strong>Tel:</strong> +7 701 485 0226</p>
                     <p><strong>Email:</strong> info@crystalclean.com</p>
                 </div>
             </div>
